Bug 43941 - 'BUG: scheduling while atomic' after: 'panic occurred, switching back to text console'
Summary: 'BUG: scheduling while atomic' after: 'panic occurred, switching back to text...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-18 14:53 UTC by Drago
Modified: 2012-01-21 08:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Kernel panic, obtained from remote console (4.20 KB, text/x-log)
2011-12-18 14:53 UTC, Drago
no flags Details
/proc/cpuinfo (1.69 KB, application/octet-stream)
2011-12-18 14:54 UTC, Drago
no flags Details
lspci output (8.81 KB, application/octet-stream)
2011-12-18 14:55 UTC, Drago
no flags Details
Normal dmesg output (56.76 KB, application/octet-stream)
2011-12-18 14:56 UTC, Drago
no flags Details
/proc/cpuinfo (1.69 KB, text/plain)
2011-12-18 15:03 UTC, Drago
no flags Details
Normal dmesg output (56.76 KB, text/plain)
2011-12-18 15:04 UTC, Drago
no flags Details
lspci output (8.81 KB, text/plain)
2011-12-18 15:04 UTC, Drago
no flags Details
Kernel panic, obtained from remote console (4.20 KB, text/plain)
2011-12-18 15:06 UTC, Drago
no flags Details
Use mdelay instead of msleep (433 bytes, patch)
2011-12-19 07:09 UTC, Michel Dänzer
no flags Details | Splinter Review

Description Drago 2011-12-18 14:53:13 UTC
Created attachment 54554 [details]
Kernel panic, obtained from remote console

Hi,
I experience some random kernel hard lockups. It appears that this happens after some time normal working. This time it happened in firefox, but it hanged in Doom3 also. 
I managed to get some debugging info. If you want some other debug info, just let me know. I am attaching system and debug info.

xf86-video-ati 6.14.3-1
ati-dri 7.11.2-1
mesa 7.11.2-1

Linux drago 3.1.5-1-ARCH #1 SMP PREEMPT Sat Dec 10 14:43:09 CET 2011 x86_64 AMD E-350 Processor AuthenticAMD GNU/Linux
Comment 1 Drago 2011-12-18 14:54:25 UTC
Created attachment 54555 [details]
/proc/cpuinfo
Comment 2 Drago 2011-12-18 14:55:17 UTC
Created attachment 54556 [details]
lspci output
Comment 3 Drago 2011-12-18 14:56:14 UTC
Created attachment 54557 [details]
Normal dmesg output
Comment 4 Drago 2011-12-18 14:57:32 UTC
Forget to mention, this is Thinkpad x120e laptop, with external display driven on 1920x1200 resolution.
Comment 5 Drago 2011-12-18 15:03:14 UTC
Created attachment 54558 [details]
/proc/cpuinfo
Comment 6 Drago 2011-12-18 15:04:00 UTC
Created attachment 54559 [details]
Normal dmesg output
Comment 7 Drago 2011-12-18 15:04:42 UTC
Created attachment 54560 [details]
lspci output
Comment 8 Drago 2011-12-18 15:06:13 UTC
Created attachment 54561 [details]
Kernel panic, obtained from remote console
Comment 9 Drago 2011-12-19 00:23:09 UTC
I've done some research, and apparently this is not a software problem.
The strange thing is that didn't happen in win7 :(
Comment 10 Drago 2011-12-19 01:36:10 UTC
I am reopening this bug, because although I get MCE exception, the driver hangs in attempt to switch to text console to display the MCE panic.
Comment 11 Michel Dänzer 2011-12-19 07:09:11 UTC
Created attachment 54573 [details] [review]
Use mdelay instead of msleep

Does this patch fix the hang when switching back to console after the MCE?
Comment 12 Drago 2011-12-19 07:39:11 UTC
Thanks, I will test this, but it may take some time for MCE to happen again.
I will report with the result here.
Comment 13 Drago 2011-12-31 03:35:14 UTC
Yes, this fixes the hang after and MCE, and it shows the error log on the screen.

Any, clues how to debug this MCE error? It doesn't happen in windows, so I guess some driver didn't program some piece of hardware right.
Thank you.
Comment 14 Michel Dänzer 2012-01-03 10:07:36 UTC
(In reply to comment #13)
> Yes, this fixes the hang after and MCE, and it shows the error log on the
> screen.

Great, thanks for testing. Note that in general a bug report shouldn't be resolved before the fix is applied or at least submitted, but anyway I've submitted it now.


> Any, clues how to debug this MCE error?

Unfortunately not.
Comment 15 Florian Mickler 2012-01-21 08:46:56 UTC
A patch referencing this bug report has been merged in Linux v3.3-rc1:

commit cc1f71942944890c7e05fc55dc4427c94b63d4f1
Author: Dave Airlie <airlied@redhat.com>
Date:   Thu Jan 5 09:55:22 2012 +0000

    drm: introduce drm_can_sleep and use in intel/radeon drivers. (v2)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.